--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             theme: {
                 extend: {
                     colors: {
-                        'primary': '#2563eb',
-                        'primary-light': '#60a5fa',
+                        'primary': '#0077cc',
+                        'primary-light': '#4dabf7',
                         'accent': '#f5f5f5',
                         'text-primary': '#333333',
                         'text-secondary': '#555555',
@@ -55,7 +55,7 @@
                     <div class="flex items-center space-x-8">
                         <a href="#mission" class="text-text-secondary hover:text-primary transition-colors duration-200 font-medium">Mission</a>
                         <a href="#contact" class="text-text-secondary hover:text-primary transition-colors duration-200 font-medium">Contact</a>
-                        <a href="#cta" class="bg-primary text-white px-5 py-2 rounded-lg hover:bg-blue-600 transition-colors duration-200 font-medium">Get Started</a>
+                        <a href="#cta" class="bg-primary text-white px-5 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-200 font-medium">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
             </div>
             
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                <a href="#cta" class="bg-primary text-white px-8 py-3 rounded-lg text-lg font-medium hover:bg-blue-600 transition-colors duration-200">
+                <a href="#cta" class="bg-primary text-white px-8 py-3 rounded-lg text-lg font-medium hover:bg-blue-700 transition-colors duration-200">
                     Get Started
                 </a>
                 <a href="#mission" class="border border-border-light text-text-primary px-8 py-3 rounded-lg text-lg font-medium hover:bg-gray-50 transition-colors duration-200">
@@ -218,7 +218,7 @@
             
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
                 <a href="mailto:contact@eduprep-ai.com" 
-                   class="bg-primary text-white px-8 py-3 rounded-lg text-lg font-medium hover:bg-blue-600 transition-colors duration-200">
+                   class="bg-primary text-white px-8 py-3 rounded-lg text-lg font-medium hover:bg-blue-700 transition-colors duration-200">
                     Get in Touch
                 </a>
                 <a href="#contact" 
@@ -305,7 +305,7 @@
                                       placeholder="Tell us about your interest in EduPrep AI..."></textarea>
                         </div>
                         <button type="submit" 
-                                class="w-full bg-primary text-white px-8 py-3 rounded-lg font-medium hover:bg-blue-600 transition-colors duration-200">
+                                class="w-full bg-primary text-white px-8 py-3 rounded-lg font-medium hover:bg-blue-700 transition-colors duration-200">
                             Send Message
                         </button>
                     </form>
