Add metrics highlighting personalized learning benefits

--- a/index.html
+++ b/index.html
@@ -104,9 +104,24 @@
                         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
                         <div class="max-w-4xl mx-auto">
                             <p class="text-lg md:text-xl text-text-primary leading-relaxed text-justify">
-                                We're building a future where AI enhances and never replaces learning. A future where no child feels inadequate because the classroom moved too fast, and after-school coaching becomes obsolete because schools finally deliver personalized feedback, deep understanding, and the space to learn at their own pace. One where AI asks better questions instead of giving answers, helping students think critically, and teachers are freed from mechanical grading.
-                            </p>
-                        </div>
+                                <span class="font-semibold">We're building a future where AI enhances and never replaces learning.</span></span> A future where no child feels left behind because the classroom moved too fast and they definitely don't have to attend a second school after returning from school.  
+                                Students aren't the only ones in a classroom, teachers matter too!
+                                We're creating a world where educators are freed from managing monotonous workflows, so they can focus on what they do best: teaching.
+                                
+                                <div class="flex flex-col md:flex-row justify-center items-center gap-8 mt-6 text-center">
+                                    <div class="bg-white p-6 rounded-lg shadow-md flex-1">
+                                        <h3 class="text-3xl font-bold text-hopeful-blue mb-2">100%</h3>
+                                        <p class="text-text-secondary">Personalized Learning</p>
+                                    </div>
+                                    <div class="bg-white p-6 rounded-lg shadow-md flex-1">
+                                        <h3 class="text-3xl font-bold text-hopeful-blue mb-2">20x</h3>
+                                        <p class="text-text-secondary">Faster Teacher Workflows</p>
+                                    </div>
+                                    <div class="bg-white p-6 rounded-lg shadow-md flex-1">
+                                        <h3 class="text-3xl font-bold text-hopeful-blue mb-2">0</h3>
+                                        <p class="text-text-secondary">After-School Tutoring</p>
+                                    </div>
+                                </div>
                     </div>
                 </div>
             </section>
@@ -120,7 +135,7 @@
                         </h2>
                         
                         <div class="space-y-4 text-center">
-                            <div class="flex items-center justify-center">
+                            <div class="flex items-center justify-center">. 
                                 <a href="mailto:anushree@eduprep.ai" class="text-xl text-hopeful-blue hover:text-hopeful-blue/80 transition-colors font-medium">
                                     anushree@eduprep.ai
                                 </a>
