--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
                     <div class="py-10 bg-hopeful-blue/10 border border-hopeful-blue/30 rounded-lg shadow-md mt-4">
                         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
                         <div class="max-w-4xl mx-auto">
-                            <p class="text-lg md:text-xl text-text-primary leading-relaxed text-justify">
-                                <span class="font-semibold">We're building a future where AI enhances and never replaces learning.</span></span> A future where no child feels left behind because the classroom moved too fast and they definitely don't have to attend a second school after returning from school.  
-                                Students aren't the only ones in a classroom, teachers matter too!
-                                We're creating a world where educators are freed from managing monotonous workflows, so they can focus on what they do best: teaching.
+                            <p class="text-lg md:text-xl text-text-primary leading-relaxed">
+                                <span class="font-semibold">We're building a future where AI enhances and never replaces learning.</span>
+                            </span> A future where no child feels left behind because the classroom moved too fast and they definitely don't have to attend a second school after returning from school.  
+                                Students aren't the only ones in a classroom, teachers matter too, so we're creating a world where educators are freed from managing monotonous workflows, so they can focus on what they do best: teaching.
                                 
-                                <div class="flex flex-col md:flex-row justify-center items-center gap-8 mt-6 text-center">
-                                    <div class="bg-white p-6 rounded-lg shadow-md flex-1">
-                                        <h3 class="text-3xl font-bold text-hopeful-blue mb-2">100%</h3>
-                                        <p class="text-text-secondary">Personalized Learning</p>
+                                <div class="flex flex-col md:flex-row justify-center items-center gap-8 mt-8 text-center">
+                                    <div class="bg-white p-8 rounded-lg shadow-md flex-1 transform hover:scale-105 transition-transform duration-300">
+                                        <h3 class="text-4xl md:text-5xl font-bold text-hopeful-blue mb-3">100%</h3>
+                                        <p class="text-lg text-text-secondary font-medium">Personalized Learning</p>
                                     </div>
-                                    <div class="bg-white p-6 rounded-lg shadow-md flex-1">
-                                        <h3 class="text-3xl font-bold text-hopeful-blue mb-2">20x</h3>
-                                        <p class="text-text-secondary">Faster Teacher Workflows</p>
+                                    <div class="bg-white p-8 rounded-lg shadow-md flex-1 transform hover:scale-105 transition-transform duration-300">
+                                        <h3 class="text-4xl md:text-5xl font-bold text-hopeful-blue mb-3">20x</h3>
+                                        <p class="text-lg text-text-secondary font-medium">Faster Teacher Workflows</p>
                                     </div>
-                                    <div class="bg-white p-6 rounded-lg shadow-md flex-1">
-                                        <h3 class="text-3xl font-bold text-hopeful-blue mb-2">0</h3>
-                                        <p class="text-text-secondary">After-School Tutoring</p>
+                                    <div class="bg-white p-8 rounded-lg shadow-md flex-1 transform hover:scale-105 transition-transform duration-300">
+                                        <h3 class="text-4xl md:text-5xl font-bold text-hopeful-blue mb-3">0</h3>
+                                        <p class="text-lg text-text-secondary font-medium">After-School Tutoring</p>
                                     </div>
                                 </div>
                     </div>
