--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
                         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
                         <div class="max-w-4xl mx-auto">
                             <p class="text-lg md:text-xl text-text-primary leading-relaxed">
-                                <span class="font-semibold">We're building a future where AI enhances and never replaces learning.</span>
-                            </span> A future where no child feels left behind because the classroom moved too fast and they definitely don't have to attend a second school after returning from school.  
+                                <span class="font-semibold">We're building a future where AI enhances and never replaces learning.</span></span> A future where no child feels left behind because the classroom moved too fast and they definitely don't have to attend a second school after returning from school.  
                                 Students aren't the only ones in a classroom, teachers matter too, so we're creating a world where educators are freed from managing monotonous workflows, so they can focus on what they do best: teaching.
                                 
-                                <div class="flex flex-col md:flex-row justify-center items-center gap-8 mt-8 text-center">
-                                    <div class="bg-white p-8 rounded-lg shadow-md flex-1 transform hover:scale-105 transition-transform duration-300">
-                                        <h3 class="text-4xl md:text-5xl font-bold text-hopeful-blue mb-3">100%</h3>
-                                        <p class="text-lg text-text-secondary font-medium">Personalized Learning</p>
+                                <!-- Clean Stats -->
+                                <div class="flex flex-wrap justify-center gap-8 mt-8 mb-6">
+                                    <div class="text-center">
+                                        <div class="text-3xl font-bold text-hopeful-blue mb-1">100%</div>
+                                        <div class="text-sm text-text-secondary">Personalized Learning</div>
                                     </div>
-                                    <div class="bg-white p-8 rounded-lg shadow-md flex-1 transform hover:scale-105 transition-transform duration-300">
-                                        <h3 class="text-4xl md:text-5xl font-bold text-hopeful-blue mb-3">20x</h3>
-                                        <p class="text-lg text-text-secondary font-medium">Faster Teacher Workflows</p>
+                                    <div class="text-center">
+                                        <div class="text-3xl font-bold text-hopeful-blue mb-1">20x</div>
+                                        <div class="text-sm text-text-secondary">Faster Teacher Workflows</div>
                                     </div>
-                                    <div class="bg-white p-8 rounded-lg shadow-md flex-1 transform hover:scale-105 transition-transform duration-300">
-                                        <h3 class="text-4xl md:text-5xl font-bold text-hopeful-blue mb-3">0</h3>
-                                        <p class="text-lg text-text-secondary font-medium">After-School Tutoring</p>
+                                    <div class="text-center">
+                                        <div class="text-3xl font-bold text-hopeful-blue mb-1">0</div>
+                                        <div class="text-sm text-text-secondary">After-School Tutoring</div>
                                     </div>
                                 </div>
                     </div>
