Change 'Faster Teacher Workflows' text to cardinal red

--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
                                 <!-- Clean Stats -->
                                 <div class="flex flex-wrap justify-center gap-8 mt-8 mb-6">
                                     <div class="text-center">
-                                        <div class="text-3xl font-bold text-hopeful-blue mb-1">100% 🎯</div>
-                                        <div class="text-sm font-bold text-green-600">Personalized Learning</div>
+                                        <div class="text-3xl font-bold text-hopeful-yellow mb-1">100% </div>
+                                        <div class="text-sm font-bold text-hopeful-red/80">Personalized Learning</div>
                                     </div>
                                     <div class="text-center">
-                                        <div class="text-3xl font-bold text-hopeful-blue mb-1">20x ⚡</div>
-                                        <div class="text-sm font-bold text-yellow-600">Faster Teacher Workflows</div>
+                                        <div class="text-3xl font-bold text-hopeful-yellow mb-1">20x </div>
+                                        <div class="text-sm font-bold text-red-700">Faster Teacher Workflows</div>
                                     </div>
                                     <div class="text-center">
-                                        <div class="text-3xl font-bold text-hopeful-blue mb-1">0 🏆</div>
-                                        <div class="text-sm font-bold text-green-600">After-School Tutoring</div>
+                                        <div class="text-3xl font-bold text-hopeful-yellow mb-1">0 </div>
+                                        <div class="text-sm font-bold text-hopeful-red/80">After-School Tutoring</div>
                                     </div>
                                 </div>
                     </div>
