Add line break in paragraph text

--- a/index.html
+++ b/index.html
@@ -104,23 +104,24 @@
                         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
                         <div class="max-w-4xl mx-auto">
                             <p class="text-lg md:text-xl text-text-primary leading-relaxed">
-                                <span class="font-semibold">We're building a future where AI enhances and never replaces learning.</span></span> 
-                                A future where no child feels left behind because the classroom moved too fast and they definitely don't have to attend a second school after returning from school.  
+                                <span class="font-semibold">We're building a future where AI enhances and never replaces learning.✨ </span></span> 
+                                A future where no child
+                                feels left behind because the classroom moved too fast and they definitely don't have to attend a second school after returning from school.  
                                 Students aren't the only ones in a classroom, teachers matter too, so we're creating a world where educators are freed from managing monotonous workflows, so they can focus on what they do best: teaching.
                                 
                                 <!-- Clean Stats -->
                                 <div class="flex flex-wrap justify-center gap-8 mt-8 mb-6">
                                     <div class="text-center">
                                         <div class="text-3xl font-bold text-hopeful-yellow mb-1">100% </div>
-                                        <div class="text-sm font-bold text-hopeful-red/80">Personalized Learning</div>
+                                        <div class="text-lg font-bold text-red-800">Personalized Learning</div>
                                     </div>
                                     <div class="text-center">
                                         <div class="text-3xl font-bold text-hopeful-yellow mb-1">20x </div>
-                                        <div class="text-sm font-bold text-red-700">Faster Teacher Workflows</div>
+                                        <div class="text-lg font-bold text-red-800">Faster Teacher Workflows</div>
                                     </div>
                                     <div class="text-center">
                                         <div class="text-3xl font-bold text-hopeful-yellow mb-1">0 </div>
-                                        <div class="text-sm font-bold text-hopeful-red/80">After-School Tutoring</div>
+                                        <div class="text-lg font-bold text-red-800">After-School Tutoring</div>
                                     </div>
                                 </div>
                     </div>
